our story added

--- a/index.html
+++ b/index.html
@@ -53,12 +53,10 @@
 
 
     <!-- third part : link to video and h3 550 X 1600-->
-    <section id="story">
+    <div class="story">
       <a href="http://"><img src="/images/png/play.png" alt="play"></a>
       <h3>WATCH OUR STORY</h3>
-    </section>
-
-
+    </div>
     <!-- fourth part : our expertise with the grid container with the icons-->
     <section>
       <div>
