--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
       <a href="http://"><img src="/images/png/play.png" alt="play"></a>
       <h3>WATCH OUR STORY</h3>
     </div>
+
+
     <!-- fourth part : our expertise with the grid container with the icons-->
     <section>
-      <div>
+      <div class="expert">
         <h2>EXPERTISE</h2>
-        <title class="title_1">Lorem ipsum dolor sit amet proin gravida nibh vel velit</title>
+        <p class="title_1">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
         <img src="" alt="separator">
       </div>
       <div class="grid__container">
