--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <!-- header's heading and paragraph + button -->
     <div class="header__parabut">
-      <h1 class="header__h1">We Are Awesome Creative Agency</h1>
+      <h1 class="header__h1">We Are Awesome Creative Agency</h1> <hr>
       <p class="header__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa molestias cumque neque harum animi, temporibus vero aperiam veritatis, excepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint. Lexcepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint. Lexcepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint.</p>
       <button class="header__button">LEARN MORE</button>
     </div>
