small changes to expert__icon div

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p class="title_1">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
         <img src="" alt="separator">
       </div>
-      <div class="grid__container">
+      <div class="icon_container">
         <div>
           <img src="/images/png/screen.png" alt="screen">
           <img> WEB DESIGN & DEVELOPMENT</h4>
