changes to divs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <!-- header's heading and paragraph + button -->
     <div class="header__parabut">
-      <h1 class="header__h1">We Are Awesome Creative Agency</h1> <hr>
+      <h1 class="header__h1">We Are Awesome Creative Agency</h1>
       <p class="header__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa molestias cumque neque harum animi, temporibus vero aperiam veritatis, excepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint. Lexcepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint. Lexcepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint.</p>
       <button class="header__button">LEARN MORE</button>
     </div>
@@ -64,43 +64,45 @@
 
     <!-- fourth part : our expertise with the grid container with the icons-->
     <section>
-      <div class="expert">
-        <h2>EXPERTISE</h2>
-        <p class="title_1">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
-        <img src="" alt="separator">
-      </div>
-      <div class="icon_container">
-        <div>
-          <img src="/images/png/screen.png" alt="screen">
-          <img> WEB DESIGN & DEVELOPMENT</h4>
-          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-          <h4></h4>
-          <p></p>
+      <div class="expert_div">
+        <div class="expert">
+          <h2>EXPERTISE</h2>
+          <p class="title_1">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+          <img src="" alt="separator">
         </div>
-        <div>
-          <img src="/images/png/pen.png" alt="pen">
-          <h4>BRANDING IDENTITY</h4>
-          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-        </div>
-        <div>
-          <img src="/images/png/mobile.png" alt="mobile">
-          <h4></h4>
-          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-        </div>
-        <div>
-          <img src="/images/png/graph.png" alt="graph">
-          <h4></h4>
-          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-        </div>
-        <div>
-          <img src="/images/png/gameboy.png" alt="gameboy">
-          <h4></h4>
-          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-        </div>
-        <div>
-          <img src="/images/png/heart.png" alt="heart">
-          <h4></h4>
-          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+        <div class="icon_container">
+          <div>
+            <img src="/images/png/screen.png" alt="screen">
+            <img> WEB DESIGN & DEVELOPMENT</h4>
+            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+            <h4></h4>
+            <p></p>
+          </div>
+          <div>
+            <img src="/images/png/pen.png" alt="pen">
+            <h4>BRANDING IDENTITY</h4>
+            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+          </div>
+          <div>
+            <img src="/images/png/mobile.png" alt="mobile">
+            <h4></h4>
+            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+          </div>
+          <div>
+            <img src="/images/png/graph.png" alt="graph">
+            <h4></h4>
+            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+          </div>
+          <div>
+            <img src="/images/png/gameboy.png" alt="gameboy">
+            <h4></h4>
+            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+          </div>
+          <div>
+            <img src="/images/png/heart.png" alt="heart">
+            <h4></h4>
+            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+          </div>
         </div>
       </div>
     </section>
