finished the team section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <!-- header's heading and paragraph + button -->
     <div class="header__parabut">
-      <h1 class="header__h1">We Are Awesome Creative Agency</h1> <hr>
+      <h1 class="header__h1">We Are Awesome Creative Agency</h1> <hr class="hr__header">
       <p class="header__para">This is Photoshop's version of Lorem Ipsum. Proin gravida nibn vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus. Morbi accumsan ipsum velit, Nam nec tellus</p>
       <button class="header__button">LEARN MORE</button>
     </div>
@@ -111,34 +111,36 @@
     <!-- fifth part : our teams with flex cont of 4 images -->
 
     <section class="meet-team">
-      <h3 class="meet-team__h3">MEET OUR AMAZING TEAM</h3>
+      <h4 class="meet-team__h3">MEET OUR AMAZING TEAM</h4>
       <p class="meet-team__para">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+      <hr class="hr__teams">
 
       <div class="flex-cont2">
         <div class="flexcont2-item">
-          <img src="" alt="">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Solid_white.svg/2048px-Solid_white.svg.png" alt="whiteimg" class="imgteam">
           <h4>TANIA BOTTERMAN</h4>
           <p>CEO & FOUNDER</p>
         </div>
         <div class="flexcont2-item">
-          <img src="" alt="">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Solid_white.svg/2048px-Solid_white.svg.png" alt="white img" class="imgteam">
           <h4>CHRISTINA VEKRI</h4>
           <p>ENGINEERING</p>
         </div>
         <div class="flexcont2-item">
-          <img src="" alt="">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Solid_white.svg/2048px-Solid_white.svg.png" alt="whiteimg" class="imgteam">
           <h4>TANIA BOTTERMAN</h4>
           <p>DESIGNER</p>
         </div>
         <div class="flexcont2-item">
-          <img src="" alt="">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Solid_white.svg/2048px-Solid_white.svg.png" alt="whiteimg" class="imgteam">
           <h4>CHRISTINA VEKRI</h4>
           <p>MARKETING</p>
         </div>
       </div>
+
       <div class="flex-cont3">
-        <p class="flexcont3-para">Become part of our dream team, let's join us !</p>
-        <button class="flexcont3-button">WE ARE HIRING</button>
+        <p class="teams-para">Become part of our dream team, let's join us !</p>
+        <button class="teams-button">WE ARE HIRING</button>
       </div>
     </section>
 
