working with columns in expert div

--- a/index.html
+++ b/index.html
@@ -73,40 +73,44 @@
         <div class="expert">
           <h2>EXPERTISE</h2>
           <p class="title_1">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
-          <img src="" alt="separator">
+          <hr>
         </div>
+
+
         <div class="icon_container">
-          <div>
-            <img src="/images/png/screen.png" alt="screen">
-            <img> WEB DESIGN & DEVELOPMENT</h4>
-            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-            <h4></h4>
-            <p></p>
+          <div class="row_top">
+            <div class="web">
+              <img src="/images/png/screen.png" alt="screen">
+              <h4> WEB DESIGN & DEVELOPMENT</h4>
+              <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+            </div>
+            <div class="brand">
+              <img src="/images/png/pen.png" alt="pen">
+              <h4>BRANDING IDENTITY</h4>
+              <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+            </div>
+            <div class="mobile">
+              <img src="/images/png/mobile.png" alt="mobile">
+              <h4>MOBILE APP</h4>
+              <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+            </div>
           </div>
-          <div>
-            <img src="/images/png/pen.png" alt="pen">
-            <h4>BRANDING IDENTITY</h4>
-            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-          </div>
-          <div>
-            <img src="/images/png/mobile.png" alt="mobile">
-            <h4></h4>
-            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-          </div>
-          <div>
-            <img src="/images/png/graph.png" alt="graph">
-            <h4></h4>
-            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-          </div>
-          <div>
-            <img src="/images/png/gameboy.png" alt="gameboy">
-            <h4></h4>
-            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-          </div>
-          <div>
-            <img src="/images/png/heart.png" alt="heart">
-            <h4></h4>
-            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+          <div class="row_bottom">
+            <div class="search">
+              <img src="/images/png/graph.png" alt="graph">
+              <h4>SEARCH ENGINE OPTIMIZATION</h4>
+              <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+            </div>
+            <div class="game">
+              <img src="/images/png/gameboy.png" alt="gameboy">
+              <h4>GAME DEVELOPMENT</h4>
+              <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+            </div>
+            <div class="made">
+              <img src="/images/png/heart.png" alt="heart">
+              <h4>MADE WITH LOVE</h4>
+              <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+            </div>
           </div>
         </div>
       </div>
