--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
     <!-- fourth part : our expertise with the grid container with the icons-->
-    <section>
+    <section id="expertise">
       <div class="expert_div">
         <div class="expert">
           <h2>EXPERTISE</h2>
@@ -76,9 +76,7 @@
           <hr>
         </div>
 
-
         <div class="icon_container">
-          <div class="row_top">
             <div class="web">
               <img src="/images/png/screen.png" alt="screen">
               <h4> WEB DESIGN & DEVELOPMENT</h4>
@@ -94,8 +92,6 @@
               <h4>MOBILE APP</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
-          </div>
-          <div class="row_bottom">
             <div class="search">
               <img src="/images/png/graph.png" alt="graph">
               <h4>SEARCH ENGINE OPTIMIZATION</h4>
@@ -111,9 +107,7 @@
               <h4>MADE WITH LOVE</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
-          </div>
         </div>
-      </div>
     </section>
 
     <!-- fifth part : our teams with flex cont of 4 images -->
