--- a/index.html
+++ b/index.html
@@ -189,36 +189,41 @@
   <footer>
     <!-- first section of footer with logo, adress+phone and social media icons -->
     <section class="flexfooter">
-      <!-- first element tajam-->
+      <!-- first flexfooter item tajam-->
       <div class="flexfooter1">
         <div class="logofooter">
           <img src="/images/png/logo.png" alt="logo" class="logoimgfoot">
-          <h4 class="logoh1foot">tajam</h4>
+          <p>tajam</p>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eligendi, minus odit quasi quos nemo accusamus nisi omnis sapiente natus delectus quam itaque quisquam sint, cumque quo? Voluptates, maiores dolorem.</p>
+        <p class="flexfooter__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eligendi, minus odit quasi quos nemo accusamus nisi omnis sapiente natus delectus quam </p>
       </div>
       <!-- second element adress and phone-->
       <div class="flexfooter2">
-        <h4 class="flexfooter2h3">OUR STUDIO</h4>
-      <a href="http://"><img src="/images/png/big104.png" alt="mapdot"></a>
-      <p>Ruko cucruk, JI. Radio luar dalem jos No. 12-13, Kalideres - Jakarta Barat 11 480 - Indonesia</p>
-      <a href="http://"><img src="/images/png/phone351.png" alt="phone"></a>
-      <p>(+62)21-2224 3333</p>
+        <h4 class="flexfooter2h4">OUR STUDIO</h4>
+      <div class="flexaddress">
+        <a href="https://www.google.com/maps/place/Kota+Kasablanka/@-6.2195289,106.8510186,15z/data=!4m6!3m5!1s0x2e69f38d200f03e5:0xaf54cb631563acce!8m2!3d-6.2240353!4d106.8425979!16s%2Fg%2F1yjg8182b?entry=ttu" target="_blank"><img src="/images/png/big104.png" alt="mapdot" class="imgdot"></a>
+        <p class="adress__para">Ruko cucruk, JI. Radio luar dalem jos No. 12-13, Kalideres - Jakarta Barat 11 480 - Indonesia</p>
+      </div>
+      <div class="flextele">
+        <a href="http://"><img src="/images/png/phone351.png" alt="phone" class="imgphone"></a>
+        <p class="telephone">(+62)21-2224 3333</p>
+      </div>
       </div>
       <!-- third element stay in touch -->
       <div class="flexfooter3">
         <h4 class="footer3h3">STAY IN TOUCH</h4>
-        <form action="/action_page.php">
-          <label for="email"></label>
+        <form action="/action_page.php" class="footerform">
           <input type="email" id="contact" name="email" placeholder="Subscribe to our newsletter">
-          <button><img src="/images/png/paper122.png" alt="arrow"></button>
+          <button class="buttonarrow"><img src="/images/png/paper122.png" alt="arrow"></button>
         </form>
-        <a href="http://"><img src="/images/png/facebook.png" alt="facebook"></a>
-        <a href="http://"><img src="/images/png/twitter.png" alt="twitter"></a>
-        <a href="http://"><img src="/images/png/dribbble.png" alt="dribble"></a>
-        <a href="http://"><img src="/images/png/instagram.png" alt="instagram"></a>
-        <a href="http://"><img src="/images/png/gplus.png" alt="googleplus"></a>
-        <a href="http://"><img src="/images/png/youtube.png" alt="youtube"></a>
+        <div class="mediaicons">
+          <a href="http://"><img src="/images/png/facebook.png" alt="facebook"></a>
+          <a href="http://"><img src="/images/png/twitter.png" alt="twitter"></a>
+          <a href="http://"><img src="/images/png/dribbble.png" alt="dribble"></a>
+          <a href="http://"><img src="/images/png/instagram.png" alt="instagram"></a>
+          <a href="http://"><img src="/images/png/gplus.png" alt="googleplus"></a>
+          <a href="http://"><img src="/images/png/youtube.png" alt="youtube"></a>
+        </div>
       </div>
     </section>
 
@@ -231,7 +236,7 @@
           <li><a href="#">PRIVACY</a></li>
         </ul>
       </nav>
-      <p class="Copyright">Copyright &copy2023 - Tajem Creative</p>
+      <p class="copyright">Copyright &copy2023 - Tajem Creative</p>
     </section>
   </footer>
   
