--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
               <h4> WEB DESIGN & DEVELOPMENT</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
-
             <div class="brand">
               <img src="/images/png/pen.png" alt="pen">
               <h4>BRANDING IDENTITY</h4>
@@ -100,19 +99,16 @@
               <h4>SEARCH ENGINE OPTIMIZATION</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
-
             <div class="game">
               <img src="/images/png/gameboy.png" alt="gameboy">
               <h4>GAME DEVELOPMENT</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
-
             <div class="made">
               <img src="/images/png/heart.png" alt="heart">
               <h4>MADE WITH LOVE</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
-            
         </div>
     </section>
 
@@ -154,26 +150,27 @@
 
     <!-- Sixth part : form and logos -->
 
-    <section>
+    <section class="brandsnews">
       <!-- the form -->
-      <div>
-        <h2></h2>
-        <form action="/action_page.php">
-          <label for="name">Name:</label>
+      <div class="goodnews">
+        <h2>GIVE US GOOD NEWS</h2>
+        <form action="/action_page.php" class="form">
           <input type="text" id="name"
-          name="name" required>
-          <label for="Email"></label>
-          <label for="Subject"></label>
-          <textarea name="Your Message" id="" cols="30" rows="10"></textarea>
-          <input type="submit">
-          <button></button>
+          name="name" required placeholder="Name">
+          <input type="email" id="email"
+          name="email" required placeholder="Email">
+          <input type="text" id="subject"
+          name="subject" placeholder="Subject">
+          
+          <textarea name="Your Message" id="" cols="30" rows="10" placeholder="Your message here"></textarea>
+          <button class="submit">Submit</button>
         </form>
       </div>
       <!-- the logos -->
-      <div>
-        <h2></h2>
+      <div class="brands">
+        <h2>OUR HAPPY CLIENT</h2>
         <div class="grid2">
-          <img src="/images/png/Zara_Logo.png" alt="zara">
+          <img src="/images/png/Zara_Logo.png" alt="zara" class="zara">
           <img src="/images/png/1280px-Barneys_New_York_Logo.png" alt="barneys">
           <img src="/images/png/Calvin_klein_logo.png" alt="calvin">
           <img src="/images/png/Converse_logo.png" alt="converse">
