--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav>
         <ul class="navbar__right">
           <li><a href="#home">HOME</a></li>
-          <li><a href="#https://www.w3schools.com/tags/att_input_required.aspabout">ABOUT</a></li>
+          <li><a href="#about">ABOUT</a></li>
           <li><a href="#expertise">EXPERTISE</a></li>
           <li><a href="#teams">TEAMS</a></li>
           <li><a href="#works">WORKS</a></li>
