--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="top__nav">
 
       <div class="logo1left">
-        <img src="/images/png/logo.png" alt="" class="img__left">
+        <img src="images/png/logo.png" alt="" class="img__left">
         <p>tajam</p>
       </div>
 
@@ -47,7 +47,7 @@
   <main>
     <!-- Second part of website : logo + our story + button -->
     <section class="flex-cont1">
-      <img src="/images/png/logo-big.png" alt="" class="flex-item1">
+      <img src="images/png/logo-big.png" alt="" class="flex-item1">
       <div class="flex-item2">
         <div class="flex2__hpara">
           <h2 class="flex-item2__h2">OUR STORY</h2>
@@ -62,7 +62,7 @@
 
     <!-- third part : link to video and h3 550 X 1600-->
     <div class="story">
-      <a href="http://"><img src="/images/png/play.png" alt="play"></a>
+      <a href="http://"><img src="images/png/play.png" alt="play"></a>
       <h3>WATCH OUR STORY</h3>
     </div>
 
@@ -78,34 +78,34 @@
 
         <div class="icon_container">
             <div class="web">
-              <img src="/images/png/screen.png" alt="screen">
+              <img src="images/png/screen.png" alt="screen">
               <h4> WEB DESIGN & DEVELOPMENT</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
             <div class="brand">
-              <img src="/images/png/pen.png" alt="pen">
+              <img src="images/png/pen.png" alt="pen">
               <h4>BRANDING IDENTITY</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
 
             <div class="mobile">
-              <img src="/images/png/mobile.png" alt="mobile">
+              <img src="images/png/mobile.png" alt="mobile">
               <h4>MOBILE APP</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
 
             <div class="search">
-              <img src="/images/png/graph.png" alt="graph">
+              <img src="images/png/graph.png" alt="graph">
               <h4>SEARCH ENGINE OPTIMIZATION</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
             <div class="game">
-              <img src="/images/png/gameboy.png" alt="gameboy">
+              <img src="images/png/gameboy.png" alt="gameboy">
               <h4>GAME DEVELOPMENT</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
             <div class="made">
-              <img src="/images/png/heart.png" alt="heart">
+              <img src="images/png/heart.png" alt="heart">
               <h4>MADE WITH LOVE</h4>
               <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
             </div>
@@ -173,16 +173,16 @@
         <div class="brands">
           <h2>OUR HAPPY CLIENT</h2>
           <div class="grid2">
-            <img src="/images/png/Zara_Logo.png" alt="zara" class="imgb">
-            <img src="/images/png/1280px-Barneys_New_York_Logo.png" alt="barneys" class="imgb">
-            <img src="/images/png/Calvin_klein_logo.png" alt="calvin"class="imgb">
-            <img src="/images/png/Converse_logo.png" alt="converse"class="imgb">
-            <img src="/images/png/1280px-Levi's_logo.png" alt="levis"class="imgb">
-            <img src="/images/png/Logo_of_Mango_(new).png" alt="mango">
-            <img src="/images/png/1280px-Gucci_Logo.png" alt="gucci"class="imgb">
-            <img src="/images/png/1280px-Logo_NIKE.png" alt="nike"class="imgb">
-            <img src="/images/png/Puma_Logo.png" alt="puma"class="imgb">
-            <img src="/images/png/Billabong.png" alt="billabong"class="imgb">
+            <img src="images/png/Zara_Logo.png" alt="zara" class="imgb">
+            <img src="images/png/1280px-Barneys_New_York_Logo.png" alt="barneys" class="imgb">
+            <img src="images/png/Calvin_klein_logo.png" alt="calvin"class="imgb">
+            <img src="images/png/Converse_logo.png" alt="converse"class="imgb">
+            <img src="images/png/1280px-Levi's_logo.png" alt="levis"class="imgb">
+            <img src="images/png/Logo_of_Mango_(new).png" alt="mango">
+            <img src="images/png/1280px-Gucci_Logo.png" alt="gucci"class="imgb">
+            <img src="images/png/1280px-Logo_NIKE.png" alt="nike"class="imgb">
+            <img src="images/png/Puma_Logo.png" alt="puma"class="imgb">
+            <img src="images/png/Billabong.png" alt="billabong"class="imgb">
           </div>
         </div>
       </div>
@@ -198,7 +198,7 @@
       <!-- first flexfooter item tajam-->
       <div class="flexfooter1">
         <div class="logofooter">
-          <img src="/images/png/logo.png" alt="logo" class="logoimgfoot">
+          <img src="images/png/logo.png" alt="logo" class="logoimgfoot">
           <p>tajam</p>
         </div>
         <p class="flexfooter__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eligendi, minus odit quasi quos nemo accusamus nisi omnis sapiente natus delectus quam </p>
@@ -211,7 +211,7 @@
         <p class="adress__para">Ruko cucruk, JI. Radio luar dalem jos No. 12-13, Kalideres - Jakarta Barat 11 480 - Indonesia</p>
       </div>
       <div class="flextele">
-        <a href="http://"><img src="/images/png/phone351.png" alt="phone" class="imgphone"></a>
+        <a href="http://"><img src="images/png/phone351.png" alt="phone" class="imgphone"></a>
         <p class="telephone">(+62)21-2224 3333</p>
       </div>
       </div>
@@ -220,15 +220,15 @@
         <h4 class="footer3h3">STAY IN TOUCH</h4>
         <form action="/action_page.php" class="footerform">
           <input type="email" id="contact" name="email" placeholder="Subscribe to our newsletter">
-          <button class="buttonarrow"><img src="/images/png/paper122.png" alt="arrow"></button>
+          <button class="buttonarrow"><img src="images/png/paper122.png" alt="arrow"></button>
         </form>
         <div class="mediaicons">
-          <a href="http://"><img src="/images/png/facebook.png" alt="facebook"></a>
-          <a href="http://"><img src="/images/png/twitter.png" alt="twitter"></a>
-          <a href="http://"><img src="/images/png/dribbble.png" alt="dribble"></a>
-          <a href="http://"><img src="/images/png/instagram.png" alt="instagram"></a>
-          <a href="http://"><img src="/images/png/gplus.png" alt="googleplus"></a>
-          <a href="http://"><img src="/images/png/youtube.png" alt="youtube"></a>
+          <a href="http://"><img src="images/png/facebook.png" alt="facebook"></a>
+          <a href="http://"><img src="images/png/twitter.png" alt="twitter"></a>
+          <a href="http://"><img src="images/png/dribbble.png" alt="dribble"></a>
+          <a href="http://"><img src="images/png/instagram.png" alt="instagram"></a>
+          <a href="http://"><img src="images/png/gplus.png" alt="googleplus"></a>
+          <a href="http://"><img src="images/png/youtube.png" alt="youtube"></a>
         </div>
       </div>
     </section>
