--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="flexfooter2">
         <h4 class="flexfooter2h4">OUR STUDIO</h4>
       <div class="flexaddress">
-        <a href="https://www.google.com/maps/place/Kota+Kasablanka/@-6.2195289,106.8510186,15z/data=!4m6!3m5!1s0x2e69f38d200f03e5:0xaf54cb631563acce!8m2!3d-6.2240353!4d106.8425979!16s%2Fg%2F1yjg8182b?entry=ttu" target="_blank"><img src="/images/png/big104.png" alt="mapdot" class="imgdot"></a>
+        <a href="https://www.google.com/maps/place/Kota+Kasablanka/@-6.2195289,106.8510186,15z/data=!4m6!3m5!1s0x2e69f38d200f03e5:0xaf54cb631563acce!8m2!3d-6.2240353!4d106.8425979!16s%2Fg%2F1yjg8182b?entry=ttu" target="_blank"><img src="images/png/big104.png" alt="mapdot" class="imgdot"></a>
         <p class="adress__para">Ruko cucruk, JI. Radio luar dalem jos No. 12-13, Kalideres - Jakarta Barat 11 480 - Indonesia</p>
       </div>
       <div class="flextele">
