Co-authored-by: EcaCosca <EcaCosca@users.noreply.github.com> Co-authored-by: Subaru Goto <Subaru-Goto@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <title>PSD to Live</title>
 </head>
+
+
+<!-- body tag is parent to everything inside of it and outermost tag is html tag-->
 <body>
   <!-- here is the header - logo and navbar -->
   <header> 
